# moonwalk-sw

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  ruff.toml
Barometer/: README.md
Barometer/Web/: app.py  requirements.txt  run_dashboard.bat
arduino/: README.md  ble_receiver.py  nano_imu_ble_sender.ino
arduino_nano_33/: README.md  ble_bridge.py  ble_contract.h  ble_contract_gen.py  ble_receiver.py  ble_smoketest.py  imu_payload.py  nano_imu_ble_sender.ino  requirements.txt
arduino_uno_q/: .gitignore  BRINGUP.md  README.md  app.yaml  requirements.txt  sync.sh
arduino_uno_q/assets/: app.js  index.html  (+2 more)
collection_interface/: .gitignore  README.md  pyproject.toml  run_streamlit.bat
collection_interface/src/collection_interface/: __init__.py  app.py  hardware_imports.py  serial_io.py  utils.py  websocket_io.py
collection_interface/tests/: test_utils.py  test_websocket_io.py
docs/: FEATURES.md  PRD.md  PROPOSAL.html  PROPOSAL.md  architecture.html  architecture.md  biofeedback_implementation.md  biofeedback_visual_design.md  csv-to-metrics.md  data-reality.md  demo-mockup.html  metrics-explained.md  metrics-mockup.html  metrics.html  metrics.md  notebooklm-three-metrics-source.md  pneumatic-bladder-build.html  pneumatic-load-sensing.html  references.md  stride-length.html
gait_pipeline/: .gitignore  README.md  pyproject.toml
gait_pipeline/src/: __init__.py  config.py  csv_logger.py  main.py  mock_nano_sensor.py  models.py  parser.py  phase_classifier.py  plotter.py
gait_pipeline/tests/: test_parser.py  test_phase_classifier.py
hardware/: README.md  app.yaml
ml_pipeline/: .gitignore  README.md  mock_baseline_walk.py  pyproject.toml  wsfc_loading_metrics.py
protocol/: ble_contract.json  gen_contract.py
realtime/: .gitignore  README.md  dashboard.html  hub.py  pokemon-dashboard.html  requirements.txt
rehab/: metrics-biofeedback-references.md  recovery-evidence.md  sensing-and-pwb-evidence.md  wsfc-processing-references.md
uno_q/: README.md  pyproject.toml
uno_q/src/: __init__.py  ble_source.py  buffer.py  config.py  main.py  mock_source.py  models.py  parser.py  webserver.py
uno_q/src/static/: dashboard.html
uno_q/tests/: test_buffer.py  test_parser.py
uno_q_imu_webui/: .gitignore  README.md  app.yaml  pyproject.toml  sync.sh
uno_q_imu_webui/assets/: app.js
uno_q_imu_webui/python/: ble_receiver.py  main.py  mock_source.py  models.py  store.py  ts_store.py  webui_server.py
uno_q_imu_webui/tests/: test_parser.py  test_store.py  test_ts_store.py
user-interface/: .env.example  .gitignore  README.md  bts.jsonc  current_features.md  package.json
(+114 files in other folders)
