[project]
name = "uno-q-gateway"
version = "0.1.0"
description = "Smart Cane UNO Q gateway: BLE receiver + local web dashboard"
requires-python = ">=3.10"
dependencies = ["flask>=3.0"]      # web dashboard (mock mode needs only this)

[project.optional-dependencies]
ble = ["bleak>=0.22"]              # real BLE input (--mode ble)
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]                 # make `src` importable from the project root
testpaths = ["tests"]
