[project]
name = "uno-q-imu-webui"
version = "0.1.0"
description = "UNO Q Smart Cane IMU dashboard on the Arduino App Lab WebUI Brick"
requires-python = ">=3.10"
# On the UNO Q, the WebUI brick + arduino.app_utils are provided by App Lab.
# The only extra runtime dependency is bleak, for BLE input (see [ble] extra).
dependencies = []

[project.optional-dependencies]
ble = ["bleak>=0.22"]              # real BLE input (--mode ble)
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["python"]            # flat modules live in python/
testpaths = ["tests"]
